fix gap

--- a/Components/General/LandingMain/LandingMain.module.scss
+++ b/Components/General/LandingMain/LandingMain.module.scss
@@ -83,7 +83,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 45px;
+  gap: 40px;
 }
 
 .titleBlock {
